--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,15 @@
-numpy==1.16.0
+certifi==2018.11.29
+cycler==0.10.0
+kiwisolver==1.0.1
+matplotlib==3.0.2
+mkl-fft==1.0.10
+mkl-random==1.0.2
+numpy==1.15.4
+pyparsing==2.3.1
+python-dateutil==2.7.5
+pytz==2018.9
 scipy==1.2.0
+six==1.12.0
+tornado==5.1.1
+tqdm==4.29.1
+wincertstore==0.2
