--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,60 @@
-certifi==2018.11.29
-cycler==0.10.0
-kiwisolver==1.0.1
-matplotlib==3.0.2
-mkl-fft==1.0.10
-mkl-random==1.0.2
-numpy==1.15.4
-pyparsing==2.3.1
-python-dateutil==2.7.5
-pytz==2018.9
-scipy==1.2.0
-six==1.12.0
-tornado==5.1.1
-tqdm==4.29.1
-wincertstore==0.2
+2019-02-18 15:59:43  (rev 0)
+    +certifi-2018.11.29
+    +pip-19.0.1
+    +python-3.6.8
+    +setuptools-40.8.0
+    +sqlite-3.26.0
+    +vc-14.1
+    +vs2015_runtime-14.15.26706
+    +wheel-0.32.3
+    +wincertstore-0.2
+
+2019-02-18 16:00:04  (rev 1)
+    +blas-1.0
+    +icc_rt-2019.0.0
+    +intel-openmp-2019.1
+    +mkl-2019.1
+    +mkl_fft-1.0.10
+    +mkl_random-1.0.2
+    +numpy-1.15.4
+    +numpy-base-1.15.4
+
+2019-02-18 16:00:22  (rev 2)
+    +scipy-1.2.0
+
+2019-02-18 16:01:07  (rev 3)
+    +ca-certificates-2019.1.23
+    +cycler-0.10.0
+    +freetype-2.9.1
+    +icu-58.2
+    +jpeg-9b
+    +kiwisolver-1.0.1
+    +libpng-1.6.36
+    +matplotlib-3.0.2
+    +openssl-1.1.1a
+    +pyparsing-2.3.1
+    +pyqt-5.9.2
+    +python-dateutil-2.7.5
+    +pytz-2018.9
+    +qt-5.9.7
+    +sip-4.19.8
+    +six-1.12.0
+    +tornado-5.1.1
+    +zlib-1.2.11
+
+2019-02-18 16:01:52  (rev 4)
+     ca-certificates  {2019.1.23 -> 2018.11.29 (conda-forge)}
+     certifi  {2018.11.29 -> 2018.11.29 (conda-forge)}
+     openssl  {1.1.1a -> 1.1.1a (conda-forge)}
+    +tqdm-4.31.1 (conda-forge)
+
+2019-02-18 17:18:48  (rev 5)
+     ca-certificates  {2018.11.29 (conda-forge) -> 2019.1.23}
+    +imageio-2.4.1
+    +libtiff-4.0.10
+    +olefile-0.46
+    +pillow-5.4.1
+    +tk-8.6.8
+    +xz-5.2.4
+    +zstd-1.3.7
+
