--- a/scatter_env.yml
+++ b/scatter_env.yml
@@ -8,5 +8,7 @@ dependencies:
   - python=3.9.4
   - scipy=1.6.2
   - tqdm=4.59.0
+  - imageio=2.9.0
   - pip:
     - gstools==1.3.2
+    - "--editable=git+https://zuada@bitbucket.org/zuada/vtk_tools.git"
