--- a/scatter_env.yml
+++ b/scatter_env.yml
@@ -6,9 +6,10 @@ dependencies:
   - matplotlib=3.3.4
   - numpy=1.20.2
   - python=3.9.4
+  - pip=21.1.3
   - scipy=1.6.2
   - tqdm=4.59.0
   - imageio=2.9.0
   - pip:
     - gstools==1.3.2
-    - "--editable=git+https://zuada@bitbucket.org/zuada/vtk_tools.git"
+    - "--editable=git+https://zuada@bitbucket.org/zuada/vtk_tools.git#egg=VTK-tools"
