--- a/scatter_env.yml
+++ b/scatter_env.yml
@@ -10,6 +10,7 @@ dependencies:
   - scipy=1.6.2
   - tqdm=4.59.0
   - imageio=2.9.0
+  - pytest=6.2.4
   - pip:
     - gstools==1.3.2
     - "--editable=git+https://zuada@bitbucket.org/zuada/vtk_tools.git#egg=VTK-tools"
