added missing definitions to pipelines
Former-commit-id: 97b9ad4c013e133189878f7f12e9f59d109d1fce

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -38,3 +38,8 @@ pipelines:
             script:
                 - conda activate scatter
                 - pytest -v ./integration_test
+
+definitions:
+   caches:
+     conda: ~/.conda/envs/solvers
+     codatarballs: /opt/conda/pkgs
