fixed name in pipelines for scatter removed lfs (not needed)
Former-commit-id: 6ab86df0731a16b2104fccc9f289b068bbe8b510

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,9 +5,6 @@
 
 image: continuumio/miniconda3:latest
 
-clone:
-  lfs: true
-
 pipelines:
   default:
     - step:
@@ -44,5 +41,5 @@ pipelines:
 
 definitions:
    caches:
-     conda: ~/.conda/envs/solvers
+     conda: ~/.conda/envs/scatter
      codatarballs: /opt/conda/pkgs
