--- a/scatter_env.yml
+++ b/scatter_env.yml
@@ -10,7 +10,8 @@ dependencies:
   - scipy=1.6.2
   - tqdm=4.59.0
   - imageio=2.9.0
-  - pytest=6.2.4
+  - pytest=5.4.2
+  - pytest-cov=2.10.1
   - pip:
     - gstools==1.3.2
     - "--editable=git+https://zuada@bitbucket.org/zuada/vtk_tools.git#egg=VTK-tools"
