updated env file with shapely
Former-commit-id: 1ff0d28ef3b4b5d60cdcbb4e78b1d72691032b60

--- a/scatter_env.yml
+++ b/scatter_env.yml
@@ -10,6 +10,7 @@ dependencies:
   - scipy=1.6.2
   - tqdm=4.62.0
   - imageio=2.9.0
+  - shapely=1.7.0
   - pytest=6.2.4
   - pytest-cov=2.12.1
   - pip:
