updated pipeline file. typo error
Former-commit-id: a4ac03b2913a38a278ceb1a5f741771fadf3fe25

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -37,7 +37,7 @@ pipelines:
                 - pip
             script:
                 - conda activate scatter
-                - pytest -v ./integration_test
+                - pytest -v ./integration_tests
 
 definitions:
    caches:
