bitbucket-pipelines.yml edited online with Bitbucket
Former-commit-id: 26b5cdc2d801c2522be46287bd955d19a53c14ba

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -36,6 +36,7 @@ pipelines:
                 - conda
                 - pip
             script:
+                - conda env update -n scatter --file scatter_env.yml
                 - conda activate scatter
                 - pytest -v ./integration_tests
 
