moved moving load at plane test to integration_test.py
Former-commit-id: 2ab732302ed95f45dbdfe362e55e3c657936ba22

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -22,7 +22,7 @@ pipelines:
                 - pip
             script:
                 - conda activate scatter
-                - pytest -v --cov=src ./tests --cov-report html:test-reports/coverage tests -m "not workinprogress"
+                - pytest -v --cov=src ./unit_test --cov-report html:test-reports/coverage unit_test -m "not workinprogress"
                 - apt-get update && apt-get --yes install zip
                 - zip -r test-reports/coverage.zip test-reports/coverage
                 - pipe: atlassian/bitbucket-upload-file:0.3.1
