scatter_env.yml edited online with Bitbucket
Former-commit-id: 74d3e5e87441b49f804a53e35f42879066d2ff52

--- a/scatter_env.yml
+++ b/scatter_env.yml
@@ -16,4 +16,4 @@ dependencies:
   - pip:
     - gstools==1.3.3
     - "--editable=git+https://zuada@bitbucket.org/zuada/vtk_tools.git#egg=VTK-tools"
-    - "git+https://A_Noordam@bitbucket.org/DeltaresGEO/rose.git#egg=rose"
+    - "--editable=git+https://A_Noordam@bitbucket.org/DeltaresGEO/rose.git#egg=rose"
