--- a/scatter_env.yml
+++ b/scatter_env.yml
@@ -15,5 +15,5 @@ dependencies:
   - pytest-cov=2.12.1
   - pip:
     - gstools==1.3.3
-    - "git+https://zuada@bitbucket.org/zuada/vtk_tools.git#egg=VTK-tools"
-    - "git+https://A_Noordam@bitbucket.org/DeltaresGEO/rose.git#egg=rose"
+    - "git+https://bitbucket.org/zuada/vtk_tools.git#egg=VTK-tools"
+    - "git+https://bitbucket.org/DeltaresGEO/rose.git#egg=rose"
