--- a/scatter_env.yml
+++ b/scatter_env.yml
@@ -13,6 +13,7 @@ dependencies:
   - shapely=1.7.0
   - pytest=6.2.4
   - pytest-cov=2.12.1
+  - pypardiso=0.4.0
   - pip:
     - gstools==1.3.3
     - "git+https://bitbucket.org/zuada/vtk_tools.git#egg=VTK-tools"
