--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -21,6 +21,7 @@ pipelines:
                 - conda
                 - pip
             script:
+                - conda env update -n scatter --file scatter_env.yml
                 - conda activate scatter
                 - pytest -v --cov=src ./unit_test --cov-report html:test-reports/coverage unit_test -m "not workinprogress"
                 - apt-get update && apt-get --yes install zip
