--- a/scatter_env.yml
+++ b/scatter_env.yml
@@ -16,5 +16,7 @@ dependencies:
   - pypardiso=0.4.0
   - pip:
     - gstools==1.3.3
+    - meshio==4.4.6
     - "git+https://bitbucket.org/zuada/vtk_tools.git#egg=VTK-tools"
     - "git+https://bitbucket.org/DeltaresGEO/rose.git#egg=rose"
+    - "git+https://bitbucket.org/DeltaresGEO/solvers.git#egg=solvers"
