updated solvers version on setup and env
Former-commit-id: bc115a70ab2c7e980736a13aca624509b06bf7c5

--- a/scatter_env.yml
+++ b/scatter_env.yml
@@ -17,4 +17,4 @@ dependencies:
     - gstools==1.4.0
     - "git+https://bitbucket.org/zuada/vtk_tools.git#egg=VTK-tools"
     - "git+https://bitbucket.org/DeltaresGEO/rose.git#egg=rose"
-    - "git+https://bitbucket.org/DeltaresGEO/solvers.git#egg=solvers"
+    - "git+https://bitbucket.org/DeltaresGEO/solvers.git@0.2#egg=solvers"
