--- a/setup.cfg
+++ b/setup.cfg
@@ -23,5 +23,5 @@ install_requires =
     gstools==1.4.0
     VTKtools@git+https://bitbucket.org/zuada/vtk_tools.git#egg=VTK-tools
     rose@git+https://bitbucket.org/DeltaresGEO/rose.git#egg=rose
-    solvers@git+https://bitbucket.org/DeltaresGEO/solvers.git#egg=solvers
+    solvers@git+https://bitbucket.org/DeltaresGEO/solvers.git@0.2#egg=solvers
 python_requires = >=3.9.6
