updated rose version on setup and env
Former-commit-id: 4fc4f6405a89a752996b37ce32066e5d7fcccacb

--- a/scatter_env.yml
+++ b/scatter_env.yml
@@ -1,4 +1,4 @@
-name: scatter
+name: scatter2
 channels:
   - conda-forge
   - defaults
@@ -16,5 +16,5 @@ dependencies:
   - pip:
     - gstools==1.4.0
     - "git+https://bitbucket.org/zuada/vtk_tools.git#egg=VTK-tools"
-    - "git+https://bitbucket.org/DeltaresGEO/rose.git#egg=rose"
+    - "git+https://bitbucket.org/DeltaresGEO/rose.git@0.1#egg=rose"
     - "git+https://bitbucket.org/DeltaresGEO/solvers.git@0.2#egg=solvers"
