renamed package src -> scatter
Former-commit-id: 4d88b38319f91114dfa354ce0b471a63401a8f31

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -23,7 +23,7 @@ pipelines:
             script:
                 - conda env update -n scatter --file scatter_env.yml
                 - conda activate scatter
-                - pytest -v --cov=src ./unit_test --cov-report html:test-reports/coverage unit_test -m "not workinprogress"
+                - pytest -v --cov=scatter ./unit_test --cov-report html:test-reports/coverage unit_test -m "not workinprogress"
                 - apt-get update && apt-get --yes install zip
                 - zip -r test-reports/coverage.zip test-reports/coverage
                 - pipe: atlassian/bitbucket-upload-file:0.3.1
