--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ install_requires =
     tqdm>=4.64.1
     shapely>=1.7.0
     gstools==1.4.0
-    VTKtools@git+https://bitbucket.org/zuada/vtk_tools.git#egg=VTK-tools
+    VTK-tools@git+https://bitbucket.org/zuada/vtk_tools.git#egg=VTK-tools
     rose@git+https://bitbucket.org/DeltaresGEO/rose.git@0.1#egg=rose
     solvers@git+https://bitbucket.org/DeltaresGEO/solvers.git@0.2#egg=solvers
 python_requires = >=3.9.6
