--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -45,7 +45,7 @@ pipelines:
                 - pip
             script:
                 - conda create -n scatter_pkg python=3.9
-                - pip install git+https://bitbucket.org/DeltaresGEO/scatter.git
+                - pip install "git+https://bitbucket.org/DeltaresGEO/scatter.git"
                 - pip install pytest==7.2.0
                 - pytest -v ./unit_test -m "not workinprogress"
                 - pytest -v ./integration_tests
