--- a/setup.cfg
+++ b/setup.cfg
@@ -20,8 +20,8 @@ install_requires =
     scipy>=1.6.2
     tqdm>=4.64.1
     shapely>=1.7.0
-    gstools==1.4.0
+    gstools>=1.4.0
     VTK-tools@git+https://bitbucket.org/zuada/vtk_tools.git#egg=VTK-tools
-    rose@git+https://bitbucket.org/DeltaresGEO/rose.git@0.1#egg=rose
-    solvers@git+https://bitbucket.org/DeltaresGEO/solvers.git@0.2#egg=solvers
+    rose@git+https://bitbucket.org/DeltaresGEO/rose.git#egg=rose
+    solvers@git+https://bitbucket.org/DeltaresGEO/solvers.git#egg=solvers
 python_requires = >=3.9.6
