--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-gstools==1.4.1
-matplotlib==3.6.2
-numpy==1.23.4
-pyproj==3.4.0
-tqdm==4.64.1
-scipy==1.9.3
-Shapely==1.8.5
-pytest=7.2.0
-pytest-cov=4.0.0
+matplotlib==3.7.1
+numpy==1.24.3
+scipy==1.10.1
+tqdm==4.65.0
+imageio==2.31.1
+shapely==2.0.1
+pytest==7.3.2
+pytest-cov==4.1.0
+gstools==1.5.0
 rose@git+https://bitbucket.org/DeltaresGEO/rose.git
-solvers @ git+https://bitbucket.org/DeltaresGEO/solvers.git
-VTK-tools @ git+https://bitbucket.org/zuada/vtk_tools.git
-WolfStiffness @ git+https://bitbucket.org/DeltaresGEO/wolfstiff.git
+solvers@git+https://bitbucket.org/DeltaresGEO/solvers.git
+VTK-tools@git+https://bitbucket.org/zuada/vtk_tools.git
