updated the setup.cfg with testing env
Former-commit-id: 2b9f4fc859f0182ca87b6e43faac16f79622c45d

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,3 +25,8 @@ install_requires =
     rose@git+https://bitbucket.org/DeltaresGEO/rose.git#egg=rose
     solvers@git+https://bitbucket.org/DeltaresGEO/solvers.git#egg=solvers
 python_requires = >=3.9.6
+
+[options.extras_require]
+testing =
+    pytest>=7.2
+    pytest-cov>=4.0
