--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ long_description = file: ReadMe.md
 long_description_content_type = text/markdown
 classifiers =
     Programming Language :: Python :: 3
-    License :: GPLv3
+    License :: BSD 3
     Operating System :: OS Independent
 
 [options]
