fixed message on terminal
Former-commit-id: 1020f0995bd57a2231b59664326358bc8344256d

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ classifiers =
 
 [options]
 packages = scatter
+           docs
 include_package_data = True
 install_requires =
     matplotlib>=3.4.2
