--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,11 @@
 [tox]
-envlist = py310, py311, py312
+envlist = py310, py311
 isolated_build = true
 
 [gh-actions]
 python =
     3.10: py310
     3.11: py311
-    3.12: py312
 
 
 [testenv]
