updated packages links

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,8 +23,8 @@ install_requires =
     shapely>=1.7.0
     gstools>=1.4.0
     VTK-tools@git+https://bitbucket.org/zuada/vtk_tools.git#egg=VTK-tools
-    rose@git+https://bitbucket.org/DeltaresGEO/rose.git#egg=rose
-    solvers@git+https://bitbucket.org/DeltaresGEO/solvers.git#egg=solvers
+    rose@git+https://github.com/PlatypusBytes/ROSE.git#egg=rose
+    solvers@git+https://github.com/PlatypusBytes/solvers.git#egg=solvers
 python_requires = >=3.9
 
 [options.extras_require]
