--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ shapely==2.0.1
 pytest==7.3.2
 pytest-cov==4.1.0
 gstools==1.5.0
-rose@git+https://bitbucket.org/DeltaresGEO/rose.git
-solvers@git+https://bitbucket.org/DeltaresGEO/solvers.git
+rose@git+https://github.com/PlatypusBytes/ROSE.git
+solvers@git+https://github.com/PlatypusBytes/solvers.git
 VTK-tools@git+https://bitbucket.org/zuada/vtk_tools.git
