--- a/setup.cfg
+++ b/setup.cfg
@@ -22,9 +22,9 @@ install_requires =
     tqdm>=4.64.1
     shapely>=1.7.0
     gstools>=1.4.0
-    VTK-tools@git+https://bitbucket.org/zuada/vtk_tools.git#egg=VTK-tools
-    rose@git+https://github.com/PlatypusBytes/ROSE.git#egg=rose
-    solvers@git+https://github.com/PlatypusBytes/solvers.git#egg=solvers
+    VTK-tools@git+https://bitbucket.org/zuada/vtk_tools.git
+    rose@git+https://github.com/PlatypusBytes/ROSE.git
+    solvers@git+https://github.com/PlatypusBytes/solvers.git
 python_requires = >=3.9
 
 [options.extras_require]
