--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,3 +31,18 @@ jobs:
         pip install tox tox-gh-actions
     - name: Test with tox
       run: tox
+  code_coverage:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.10"
+      - name: Generate code coverage report
+        run: |
+          python -m pip install --upgrade pip
+          pip install .'[testing]'
+          pytest tests --cov=scatter --cov-report=html:coverage_report
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v3
