--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,12 +12,10 @@ on:
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        python-version: ['3.10', '3.11']
-
+        python: [ "3.10", "3.11"]
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - uses: actions/checkout@v3
@@ -43,6 +41,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .'[testing]'
-          pytest tests --cov=scatter --cov-report=html:coverage_report
+          pytest unit_test --cov=scatter --cov-report=html:coverage_report
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v3
