--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ shapely==2.0.1
 pytest==7.3.2
 pytest-cov==4.1.0
 gstools==1.5.0
+tox==4.11.3
 rose@git+https://github.com/PlatypusBytes/ROSE.git
 solvers@git+https://github.com/PlatypusBytes/solvers.git
 VTK-tools@git+https://bitbucket.org/zuada/vtk_tools.git
