--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,6 +41,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .'[testing]'
-          pytest unit_test --cov=scatter --cov-report=html:coverage_report
+          pytest unit_test integration_tests --cov=scatter --cov-report=html:coverage_report
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v3
