--- a/tox.ini
+++ b/tox.ini
@@ -15,4 +15,4 @@ deps =
     -r{toxinidir}/requirements.txt
 commands =
     pytest --basetemp={envtmpdir} unit_test
-    pytest --basetemp={envtmpdir} integration_test
+    pytest --basetemp={envtmpdir} integration_tests
