--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ install_requires =
     tqdm>=4.64.1
     shapely>=1.7.0
     gstools>=1.4.0
-    VTK-tools@git+https://bitbucket.org/zuada/vtk_tools.git
+    VTK-tools@git+https://github.com/PlatypusBytes/vtk_tools.git
     rose@git+https://github.com/PlatypusBytes/ROSE.git
     solvers@git+https://github.com/PlatypusBytes/solvers.git
 python_requires = >=3.9
