--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ install_requires =
     gstools>=1.4.0
     VTK-tools@git+https://github.com/PlatypusBytes/vtk_tools.git
     rose@git+https://github.com/PlatypusBytes/ROSE.git
-    solvers@git+https://github.com/PlatypusBytes/solvers.git
+    PuggleSolvers==1.0.1
 python_requires = >=3.9
 
 [options.extras_require]
